--- a/index.html
+++ b/index.html
@@ -263,45 +263,33 @@ if ('serviceWorker' in navigator) {
   });
 }
 </script>
-<button id="installBtn" aria-label="Zainstaluj aplikację" style="position:fixed;right:16px;bottom:16px;height:52px;padding:0 16px;background:#22c55e;color:#fff;border:none;border-radius:14px;font-weight:800;box-shadow:0 12px 28px rgba(0,0,0,.25);z-index:9999;cursor:pointer">+ Zainstaluj aplikację</button>
+<button id="installBtn" style="position:fixed;right:16px;bottom:16px;padding:12px 16px;background:#22c55e;color:#fff;border:none;border-radius:12px;font-weight:700;box-shadow:0 6px 16px rgba(0,0,0,.2);z-index:9999;cursor:pointer">+ Zainstaluj aplikację</button>
 
 
 <script>
 (function(){
-  const btn = document.getElementById('installBtn');
-  const isStandalone = window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone;
-  if (btn && isStandalone) btn.style.display='none';
-
-  let deferredPrompt = null;
-  window.addEventListener('beforeinstallprompt', (e) => { e.preventDefault(); deferredPrompt = e; if(btn) btn.style.display=''; });
-
-  async function tryInstall(){
-    if (deferredPrompt && deferredPrompt.prompt){
+  var btn = document.getElementById('installBtn');
+  var isStandalone = window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone;
+  if (btn && isStandalone) btn.style.display = 'none';
+  var deferredPrompt = null;
+  window.addEventListener('beforeinstallprompt', function(e){ e.preventDefault(); deferredPrompt = e; });
+  if (btn) btn.addEventListener('click', async function(){
+    if (deferredPrompt && deferredPrompt.prompt) {
       deferredPrompt.prompt();
-      const res = await deferredPrompt.userChoice;
+      var c = await deferredPrompt.userChoice;
       deferredPrompt = null;
-      if (res && res.outcome === 'accepted'){ if(btn) btn.style.display='none'; return true; }
+      if (c && c.outcome === 'accepted') btn.style.display='none';
+    } else {
+      alert('Jeśli nie widać okna instalacji, użyj: ⋮ → „Zainstaluj aplikację”.');
     }
-    return false;
-  }
-
-  async function forceInstall(){
-    const ok = await tryInstall();
-    if (!ok){
-      alert('Jeśli nie widzisz natywnego okna instalacji:\n1) Kliknij menu Chrome (⋮)\n2) Wybierz „Zainstaluj aplikację”.\nPo instalacji aplikacja działa offline.');
-    }
-  }
-
-  if (btn){ btn.addEventListener('click', forceInstall); }
-
-  window.addEventListener('appinstalled', () => {
-    if (btn) btn.style.display='none';
-    alert('✅ AJ Kalendarz został zainstalowany i działa offline.');
   });
-
-  if ('serviceWorker' in navigator){
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js').catch(e => console.log('SW reg error', e));
+  window.addEventListener('appinstalled', function(){
+    if (btn) btn.style.display='none';
+    alert('✅ Aplikacja AJ Kalendarz Treningowy została zainstalowana i działa offline.');
+  });
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function(){
+      navigator.serviceWorker.register('/sw.js').catch(function(e){ console.log('SW error:', e); });
     });
   }
 })();
